# kaleidoscope

./: LICENSE  kaleidoscope.cabal  readme.md
